<resources>
    <string name="app_name">金沃蛋蛋</string>
    <string name="msg">消息</string>
    <string name="task">任务</string>
    <string name="taskdetail">任务详情</string>
    <string name="order">订单</string>
    <string name="me">我的</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="notifypwd">修改密码</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="update">版本更新</string>
    <string name="sendout">发送</string>
    <string name="settings">设置</string>
    <string name="newpwd">新密码</string>
    <string name="repeatpwd">重复密码</string>
    <string name="submit">提交</string>
    <string name="username">用户：</string>
    <string name="depart">部门：</string>
    <string name="zhidu">制度：</string>
    <string name="company">公司：</string>
    <string name="companydetail">公司简介：</string>
    <string name="lately">最近发布：</string>
    <string name="daka">打卡</string>
    <string name="jiankong">实时监控</string>
    <string name="tongji">统计表</string>
    <string name="shang">上班</string>
    <string name="xia">下班</string>
    <string name="dktime">打卡时间</string>
    <string name="dklocate">打卡地点</string>
    <string name="out">外出到达地</string>
    <string name="details">详情</string>
    <string name="zhu">基本信息</string>
    <string name="zi">商品详情</string>
    <string name="no">单据号：</string>
    <string name="currency">币别：</string>
    <string name="rate">汇率：</string>
    <string name="departs">组织机构：</string>
    <string name="bumen">部门：</string>
    <string name="area">申请部门：</string>
    <string name="zeren">责任部门：</string>
    <string name="qi">启日期：</string>
    <string name="zhi">止日期：</string>
    <string name="respon">责任人：</string>
    <string name="zhidan">制单人：</string>
    <string name="progress">计划预算进度：</string>
    <string name="plan">计划：</string>
    <string name="budget">预算：</string>
    <string name="pbudget">计划预算额：</string>
    <string name="note">备注：</string>
    <string name="contacts">往来：</string>
    <string name="content">内容：</string>
    <string name="item">物料：</string>
    <string name="jinehs">金额含税：</string>
    <string name="rmb">人民币不含税额：</string>
    <string name="sup">辅助：</string>
    <string name="supl">辅量：</string>
    <string name="send">发送消息：</string>
    <string name="receive">回馈消息：</string>
    <string name="zhiding">审核人：</string>
    <string name="point">评分：</string>
    <string name="notask">暂无任务单</string>
    <string name="add">新增</string>
    <string name="addtask">新增任务</string>
    <string name="select">点击选择</string>
    <string name="zhidu1">制度所属部门:</string>
    <string name="zhidu2">制度操作细则:</string>
    <string name="jiliang">计量:</string>
    <string name="shuliang">数量:</string>
    <string name="total">总量:</string>
    <string name="amount">总金额:</string>
    <string name="danjia">单价:</string>
    <string name="emp">人员:</string>
    <string name="basicdata">基础资料</string>
    <string name="ren">人民币</string>
    <string name="a">一审:</string>
    <string name="b">二审:</string>
    <string name="c">三审:</string>
    <string name="d">四审:</string>
    <string name="e">五审:</string>
    <string name="check">审核</string>
    <string name="ncheck">待审核</string>

    <string name="cancle">取消</string>
    <string name="chaosong">抄送</string>
    <string name="shaixuan">筛选</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
