<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.win7.ytdemo.activity.MainActivity">

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#BEBEBE"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">

        <Button
            android:id="@+id/btn_msg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/btn_msg_selector"
            android:text="@string/msg"
            android:textColor="@color/btn_color"
            />
        <Button
            android:id="@+id/btn_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/btn_task_selector"
            android:text="@string/task"
            android:textColor="@color/btn_color"
            />
        <Button
            android:id="@+id/btn_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/btn_order_selector"
            android:text="@string/order"
            android:textColor="@color/btn_color"
            />
        <Button
            android:id="@+id/btn_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/btn_me_selector"
            android:text="@string/me"
            android:textColor="@color/btn_color"
            />
    </LinearLayout>

</LinearLayout>
