<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.win7.ytdemo.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:background="@drawable/et_shape"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:background="@drawable/et_shape"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_style"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>

</LinearLayout>
