<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.win7.ytdemo.activity.AddTaskActivity">

    <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/currency"/>
            <TextView
                android:id="@+id/tv_bibie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ren"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:gravity="center_vertical|right"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/rate"/>
            <TextView
                android:id="@+id/tv_huilv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:text="1.00"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bottom_button_text_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/departs"
                android:gravity="center_vertical"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_zuzhi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/select"
                android:textSize="16sp"
                android:textColor="@color/bottom_button_text_black"
                android:gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:singleLine="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bottom_button_text_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/area"
                android:gravity="center_vertical"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_quyu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/select"
                android:textSize="16sp"
                android:textColor="@color/bottom_button_text_black"
                android:gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:singleLine="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bottom_button_text_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/respon"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_respon_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:hint="@string/select"
                android:textColor="@color/bottom_button_text_black"
                android:singleLine="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bottom_button_text_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zhidan"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_zhidan_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:hint="@string/select"
                android:textColor="@color/bottom_button_text_black"
                android:singleLine="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bottom_button_text_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/contacts"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_contacts_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:hint="@string/select"
                android:textColor="@color/bottom_button_text_black"
                android:singleLine="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/content"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_content_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:hint="@string/select"
            android:textColor="@color/bottom_button_text_black"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/jiliang"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_jl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:hint="@string/select"
            android:textColor="@color/bottom_button_text_black"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ListView
                android:id="@+id/lv_zb"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </ListView>

        <Button
            android:id="@+id/btn_submit_add"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/ll_add"/>

        </LinearLayout>
</LinearLayout>
