<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.win7.ytdemo.fragment.ZhuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/currency"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rate"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/departs"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_departs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/area"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/respon"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_respon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zhidan"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_zhidan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/contacts"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/content"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/jiliang"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bottom_button_text_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_jiliang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_button_text_gray"/>
</LinearLayout>
